Added ability to use the seed service
This change allows us to fully utilize the seed service and configure
ourselves based on its content. Currenly it's still crude but security
and deployment optimizations are pending.

--- a/conjur-oss/templates/auth-role.yaml
+++ b/conjur-oss/templates/auth-role.yaml
@@ -64,4 +64,6 @@ roleRef:
   kind: ClusterRole
   name: {{ .Release.Name }}-conjur-authenticator
   apiGroup: rbac.authorization.k8s.io
+
+# TODO: Possibly add separate account for external API usage
 {{- end }}
