--- a/e2e/openshift/postgres/etc/postgresql/postgresql.conf
+++ b/e2e/openshift/postgres/etc/postgresql/postgresql.conf
@@ -14,7 +14,7 @@ shared_buffers = '24MB'
 ssl = on
 ssl_ca_file = '/opt/conjur/etc/ssl/ca/tls.crt'
 ssl_cert_file = '/opt/conjur/etc/ssl/cert/tls.crt'
-ssl_key_file = '/opt/conjur/etc/ssl/cert/tls.key'
+ssl_key_file = '/tmp/tls.key'
 unix_socket_directories = '/tmp'
 wal_keep_segments = 8
 wal_level = 'hot_standby'
