Moved all Openshift containers to use limited seed content
We don't want to proliferate seed data so we now only share what the
container will need from the seed-fetcher

--- a/conjur-oss/files/conjur.conf
+++ b/conjur-oss/files/conjur.conf
@@ -1,6 +1,6 @@
 server {
   ssl_certificate /opt/conjur/etc/ssl/cert/tls.crt;
-  ssl_certificate_key /opt/conjur/etc/ssl/cert/tls.key;
+  ssl_certificate_key /tmp/tls.key;
 
   ssl_client_certificate /opt/conjur/etc/ssl/ca/tls.crt;
 
