--- a/e2e/openshift/syslogng/syslog-ng/conf.d/05-conjur-audit.conf
+++ b/e2e/openshift/syslogng/syslog-ng/conf.d/05-conjur-audit.conf
@@ -12,7 +12,7 @@ destination d_conjur_audit_send {
     "$CONJUR_MASTER" port(1999)
     transport("tls")
     tls(
-      key-file("/opt/conjur/etc/ssl/cert/tls.key")
+      key-file("/tmp/tls.key")
       cert-file("/opt/conjur/etc/ssl/cert/tls.crt")
       ca-dir("/opt/conjur/etc/ssl/ca/")
       peer-verify(required-untrusted)
