--- a/conjur-oss/Chart.yaml
+++ b/conjur-oss/Chart.yaml
@@ -3,7 +3,7 @@ name: conjur-oss
 home: https://www.conjur.org
 version: 1.3.8
 description: A Helm chart for CyberArk Conjur
-icon: https://xebialabs-clients-iglusjax.stackpathdns.com/assets/files/logos/CyberArkConjurLogoWhiteBlue.png
+icon: https://www.cyberark.com/wp-content/uploads/2015/12/cybr-aim.jpg
 keywords:
   - security
   - 'secrets management'
