--- a/conjur-oss/templates/secrets.yaml
+++ b/conjur-oss/templates/secrets.yaml
@@ -31,10 +31,14 @@ metadata:
 {{- with .Values.conjurLabels }}
 {{ toYaml . | indent 4 }}
 {{- end }}
+  annotations:
+    helm.sh/hook: pre-install
+    helm.sh/hook-delete-policy: before-hook-creation
 type: Opaque
 data:
-  key: "{{ required "'dataKey' has no value, it must be provided!" .Values.dataKey | b64enc }}"
+  key: {{ required "'Values.dataKey' is required for helm install. For helm upgrade, use '--reuse-values' command line flag" .Values.dataKey | b64enc }}
 ---
+{{- include "conjur-oss.database-password" . }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -49,10 +53,69 @@ metadata:
 {{- with .Values.conjurLabels }}
 {{ toYaml . | indent 4 }}
 {{- end }}
+{{- if not .Values.database.url }}
+  annotations:
+    helm.sh/hook: pre-install
+    helm.sh/hook-delete-policy: before-hook-creation
+{{- end }}
 type: Opaque
 data:
-  {{ if .Values.databaseUrl }}
-  key: {{ .Values.databaseUrl | b64enc }}
+  {{ if .Values.database.url }}
+  key: {{ .Values.database.url | b64enc }}
   {{ else }}
-  key: {{ printf "postgres://postgres@%v-postgres/postgres" .Release.Name | b64enc }}
+  key: {{ printf "postgres://postgres:%s@%v-postgres/postgres?sslmode=require" .dbPassword .Release.Name | b64enc }}
   {{ end }}
+
+{{ if eq .Values.database.url "" }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ .Release.Name }}-conjur-database-password
+  labels:
+    app: {{ template "conjur-oss.name" . }}
+    chart: {{ template "conjur-oss.chart" . }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
+    app.kubernetes.io/name: {{ .Release.Name }}
+    app.kubernetes.io/component: service
+{{- with .Values.conjurLabels }}
+{{ toYaml . | indent 4 }}
+{{- end }}
+  annotations:
+    helm.sh/hook: pre-install
+    helm.sh/hook-delete-policy: before-hook-creation
+type: Opaque
+data:
+  key: {{ .dbPassword | b64enc }}
+---
+{{- include "conjur-oss.database-cert-gen" . }}
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ .Release.Name }}-conjur-database-ssl
+  labels:
+    app: {{ template "conjur-oss.name" . }}
+    chart: {{ template "conjur-oss.chart" . }}
+    release: {{ .Release.Name }}
+    heritage: {{ .Release.Service }}
+    app.kubernetes.io/name: {{ .Release.Name }}
+    app.kubernetes.io/component: service
+{{- with .Values.conjurLabels }}
+{{ toYaml . | indent 4 }}
+{{- end }}
+{{- if not .Values.database.ssl.cert }}
+  annotations:
+    helm.sh/hook: pre-install
+    helm.sh/hook-delete-policy: before-hook-creation
+{{- end }}
+type: kubernetes.io/tls
+data:
+{{- if .Values.database.ssl.cert }}
+  tls.crt: {{ .Values.database.ssl.cert }}
+  tls.key: {{ required "'Values.database.ssl.key' has no value, it must be provided!" .Values.database.ssl.key }}
+{{- else }}
+  tls.crt: {{ .dbCrt }}
+  tls.key: {{ .dbKey }}
+{{- end }}
+{{ end }}
