--- a/conjur-oss/templates/ssl-cert.yaml
+++ b/conjur-oss/templates/ssl-cert.yaml
@@ -14,10 +14,20 @@ metadata:
 {{- with .Values.conjurLabels }}
 {{ toYaml . | indent 4 }}
 {{- end }}
+{{- if not .Values.ssl.caCert }}
+  annotations:
+    helm.sh/hook: pre-install
+    helm.sh/hook-delete-policy: before-hook-creation
+{{- end }}
 type: kubernetes.io/tls
 data:
+{{- if .Values.ssl.caCert }}
+  tls.crt: {{ .Values.ssl.caCert }}
+  tls.key: {{ required "'Values.ssl.caKey' must be provided!" .Values.ssl.caKey }}
+{{- else }}
   tls.crt: {{ .caCrt }}
   tls.key: {{ .caKey }}
+{{- end }}
 ---
 apiVersion: v1
 kind: Secret
@@ -33,7 +43,17 @@ metadata:
 {{- with .Values.conjurLabels }}
 {{ toYaml . | indent 4 }}
 {{- end }}
+{{- if not .Values.ssl.caCert }}
+  annotations:
+    helm.sh/hook: pre-install
+    helm.sh/hook-delete-policy: before-hook-creation
+{{- end }}
 type: kubernetes.io/tls
 data:
+{{- if .Values.ssl.caCert }}
+  tls.crt: {{ required "'Values.ssl.cert' must be provided!" .Values.ssl.cert }}
+  tls.key: {{ required "'Values.ssl.key' must be provided!" .Values.ssl.key }}
+{{- else }}
   tls.crt: {{ .certCrt }}
   tls.key: {{ .certKey }}
+{{- end }}
