Adds GCP-based Jenkins test
This change adds a GCP/GKE based Jenkins test that does the following
using Helm v3:
 - Creates a Kubernetes namespace
 - Runs a Helm install of a Conjur OSS server
 - Runs a Helm test that deploys a test container that
   confirms that the Conjur server's status page is active.
 - Does a Helm delete of the Conjur OSS release
 - Deletes the namespace

Also fixes an issue with running the 'test.sh' script with Helm v2
in that the 'helm test ...' and 'helm delete ...' commands were
incorrectly including a namespace argument (a namespace argument
is only used for 'helm install ...' for Helm v2).

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
         run: ./test-minimal.sh
 
   install-test-helm-v2:
-    name: Install/test Conjur with Helm V2 on KinD Cluster
+    name: Install/test Conjur with Helm V2 on KinD Cluster (v1.18.2)
     needs:
       - linter
       - install-test-helm-v3
