Use Json Schema for values validation Validate values using Json Schema to improve UX, instead of inline validation. Benefits:  - Validation resides next to the values.yaml instead of inline in the templates  - Error handling done by Json Schema infra  - Use built-in validation tool  - Can validate types of input, range, regex and more  - All validations are concentrated in one place

--- a/conjur-oss/templates/secrets.yaml
+++ b/conjur-oss/templates/secrets.yaml
@@ -36,7 +36,7 @@ metadata:
     helm.sh/hook-delete-policy: before-hook-creation
 type: Opaque
 data:
-  key: {{ required "'Values.dataKey' is required for helm install. For helm upgrade, use '--reuse-values' command line flag" .Values.dataKey | b64enc }}
+  key: {{ .Values.dataKey | b64enc }}
 ---
 {{- include "conjur-oss.database-password" . }}
 apiVersion: v1
@@ -113,7 +113,7 @@ type: kubernetes.io/tls
 data:
 {{- if .Values.database.ssl.cert }}
   tls.crt: {{ .Values.database.ssl.cert }}
-  tls.key: {{ required "'Values.database.ssl.key' has no value, it must be provided!" .Values.database.ssl.key }}
+  tls.key: {{ .Values.database.ssl.key }}
 {{- else }}
   tls.crt: {{ .dbCrt }}
   tls.key: {{ .dbKey }}
