Add logLevel for Conjur container
The logging level can now be configured by setting
the `logLevel` value.
Documentation added for changing logLevel and
changing values using `helm upgrade`

--- a/conjur-oss/templates/deployment.yaml
+++ b/conjur-oss/templates/deployment.yaml
@@ -133,6 +133,8 @@ spec:
               key: key
         - name: CONJUR_ACCOUNT
           value: {{ .Values.account }}
+        - name: CONJUR_LOG_LEVEL
+          value: {{ .Values.logLevel }}
         resources:
 {{ toYaml .Values.resources | indent 12 }}
     {{- with .Values.nodeSelector }}
