--- a/conjur-oss/templates/deployment.yaml
+++ b/conjur-oss/templates/deployment.yaml
@@ -36,18 +36,18 @@ spec:
           secretName: {{ .Release.Name }}-conjur-ssl-ca-cert
           # Permission == 0400. JSON spec doesn’t support octal notation.
           defaultMode: 256
-      - name: {{ .Release.Name }}-conjur-configmap-volume
-        configMap:
-          name: {{ .Release.Name }}-conjur-nginx-configmap
-          items:
-            - key: nginx_conf
-              path: nginx.conf
-            - key: mime_types
-              path: mime.types
-            - key: dhparams
-              path: dhparams.pem
-            - key: conjur_site
-              path: sites-enabled/conjur.conf
+#      - name: {{ .Release.Name }}-conjur-configmap-volume
+#        configMap:
+#          name: {{ .Release.Name }}-conjur-nginx-configmap
+#          items:
+#            - key: nginx_conf
+#              path: nginx.conf
+#            - key: mime_types
+#              path: mime.types
+#            - key: dhparams
+#              path: dhparams.pem
+#            - key: conjur_site
+#              path: sites-enabled/conjur.conf
 
       containers:
       - name: {{ .Release.Name }}-nginx
@@ -85,22 +85,22 @@ spec:
         - name: {{ .Release.Name }}-conjur-ssl-ca-cert-volume
           mountPath: /opt/conjur/etc/ssl/ca
           readOnly: true
-        - name: {{ .Release.Name }}-conjur-configmap-volume
-          mountPath: /etc/nginx
-          readOnly: true
+#        - name: {{ .Release.Name }}-conjur-configmap-volume
+#          mountPath: /etc/nginx
+#          readOnly: true
 
       - name: {{ .Chart.Name }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
-        args: ["server"]
+        args: ["server", "--port=8080"]
         ports:
           - name: http
-            containerPort: 80
+            containerPort: 8080
             protocol: TCP
         livenessProbe:
           httpGet:
             path: /
-            port: 80
+            port: http
           initialDelaySeconds: 1
           periodSeconds: 5
           timeoutSeconds: 2
