POC - Implements Conjur OSS database as postgresql Helm subchart
This branch implements the Conjur OSS backend database as a
Helm subchart. The Helm subchart imports from the bitnami/postgreql chart.

Needs some work to:
- Autogenerate a Postgresql password by default
- Set the database.url value based on that password
- Use checksum/config annotations with hashes to selectively
  recreate pods in the Conjur-OSS cluster but not the Postgresql
  cluster.

To deploy Conjur with a Postgresql database, run:

```
DATA_KEY="$(docker run --rm cyberark/conjur data-key generate)"
CONJUR_NAMESPACE=conjur-with-subchart
PG_PASSWORD=0mbkLSg9ah
PG_NAMESPACE="$CONJUR_NAMESPACE"

kubectl create namespace "${CONJUR_NAMESPACE}"
helm install \
   -n "${CONJUR_NAMESPACE}" \
   --set dataKey="${DATA_KEY}" \
   --set rbac.create=false \
   --set database.url="postgres://postgres:${PG_PASSWORD}@conjur-oss-postgresql.${PG_NAMESPACE}.svc.cluster.local:5432/postgres" \
   --set postgresql.postgresqlPassword="${PG_PASSWORD}" \
   conjur-oss .
```

--- a/conjur-oss/Chart.yaml
+++ b/conjur-oss/Chart.yaml
@@ -13,3 +13,7 @@ sources:
 maintainers:
   - name: Conjur Maintainers
     email: conj_maintainers@cyberark.com
+dependencies:
+  - name: postgresql
+    version: 9.8.2
+    repository: "https://charts.bitnami.com/bitnami"
