Add post-install account creation
The account value has been changed to an object, containing two sub-types, account.create
and account.name. These parameters will dictate that a Conjur account should be created on startup,
and what the name of the account will be, respectively.

--- a/conjur-oss/templates/deployment.yaml
+++ b/conjur-oss/templates/deployment.yaml
@@ -92,7 +92,11 @@ spec:
       - name: {{ .Chart.Name }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
+{{- if .Values.account.name }}
+        args: ["server", "--account={{ .Values.account.name }}"]
+{{ else }}
         args: ["server"]
+{{- end }}
         ports:
           - name: http
             containerPort: 80
@@ -132,7 +136,7 @@ spec:
               name: {{ .Release.Name }}-conjur-database-url
               key: key
         - name: CONJUR_ACCOUNT
-          value: {{ .Values.account }}
+          value: {{ .Values.account.name }}
         - name: CONJUR_LOG_LEVEL
           value: {{ .Values.logLevel }}
         resources:
