--- a/conjur-oss/values.yaml
+++ b/conjur-oss/values.yaml
@@ -8,10 +8,13 @@
 # risk of leaving around residual values files containing this sensitive
 # information.
 
-
-# Name of Conjur account to be created. Maps to CONJUR_ACCOUNT env variable
-# for the Conjur container.
-account: "default"
+account:
+  # Name of Conjur account to be created. Maps to CONJUR_ACCOUNT env variable
+  # for the Conjur container.
+  name: "default"
+  # Set to 'true' to allow the Conjur server to automatically create an account
+  # with the configured account.name.
+  create: false
 
 # Affinity rules to apply to the Conjur pod to indicate to Kubernetes scheduler
 # which nodes would be most appropriate for Conjur pod placement. See:
