--- a/conjur-oss/templates/deployment.yaml
+++ b/conjur-oss/templates/deployment.yaml
@@ -13,7 +13,6 @@ metadata:
 {{ toYaml . | indent 4 }}
 {{- end }}
 {{- with .Values.deployment.annotations }}
-  annotations:
 {{ toYaml . | indent 4 }}
 {{- end }}
 spec:
@@ -23,18 +22,23 @@ spec:
   template:
     metadata:
       labels: *AppConjurLabels
+      annotations:
+        # Automatically roll deployment if dependent secrets have been changed
+        checksum/config: {{ include (print $.Template.BasePath "/secrets.yaml") . | sha256sum }}
+        checksum/config: {{ include (print $.Template.BasePath "/ssl-cert.yaml") . | sha256sum }}
+        checksum/config: {{ include (print $.Template.BasePath "/nginx-configmap.yaml") . | sha256sum }}
     spec:
       serviceAccountName: {{ template "conjur-oss.service-account" . }}
       volumes:
       - name: {{ .Release.Name }}-conjur-ssl-cert-volume
         secret:
           secretName: {{ .Release.Name }}-conjur-ssl-cert
-          # Permission == 0400. JSON spec doesn’t support octal notation.
+          # Permission == 0400. JSON spec doesn't support octal notation.
           defaultMode: 256
       - name: {{ .Release.Name }}-conjur-ssl-ca-cert-volume
         secret:
           secretName: {{ .Release.Name }}-conjur-ssl-ca-cert
-          # Permission == 0400. JSON spec doesn’t support octal notation.
+          # Permission == 0400. JSON spec doesn't support octal notation.
           defaultMode: 256
       - name: {{ .Release.Name }}-conjur-configmap-volume
         configMap:
