--- a/conjur-oss/templates/deployment.yaml
+++ b/conjur-oss/templates/deployment.yaml
@@ -131,6 +131,13 @@ spec:
             secretKeyRef:
               name: {{ .Release.Name }}-conjur-database-url
               key: key
+        {{ if .Values.database.remotePassword }}
+        - name: PGPASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: {{ .Release.Name }}-database-remote-password
+              key: key
+        {{ end }}
         - name: CONJUR_ACCOUNT
           value: {{ .Values.account }}
         - name: CONJUR_LOG_LEVEL
