Deprecates creation of ClusterRoleBinding by default
The current Conjur OSS Helm chart templates include the creation of both
a Kubernetes ClusterRole and a ClusterRoleBinding. The intent of the
ClusterRoleBinding is to grant RBAC permissions (across all namespaces) for
the Conjur's Kubernetes authenticator plugin (authn-k8s).

A better approach is to not use a ClusterRoleBinding (which applies across
all namespaces), and instead rely upon users to create namespace-scoped
RoleBindings for those namespaces that have applications that require
authn-k8s authentication.

This change adds deprecation warnings in the chart README.md and in
the charts values.yaml file indicating that the 'rbac.create' chart
value is being deprecated, and is expected to be replaced by 2 separate
settings in the next major release:
    - rbac.createClusterRole         (defaulting to true)
    - rbac.createClusterRoleBinding  (defaulting to true, for now)

Addresses Issue #95

--- a/conjur-oss/values.yaml
+++ b/conjur-oss/values.yaml
@@ -94,6 +94,14 @@ postgresLabels: {}
 # created. This should be set to true, unless there is already a Conjur
 # deployment in a separate namespace that has already created these
 # cluster-wide resources.
+#
+# NOTE: This setting is deprecated and will be replaced in the next major
+# release with two separate settings:
+#   - rbac.createClusterRole        (defaulting to true)
+#   - rbac.createClusterRoleBinding (defaulting to false)
+# and the recommendation will be for chart users to create RoleBindings
+# for each individual namespace that supports applications that require
+# Conjur Kubernetes authentication.
 rbac:
   create: true
 
