Add internal registry to KinD example
By default, our KinD example now will create a  internal registry, then export the URL to be used by
our kubernetes demo when pulling and pushing images

--- a/examples/kubernetes-in-docker/customize.env
+++ b/examples/kubernetes-in-docker/customize.env
@@ -3,19 +3,20 @@
 # Uncomment and modify the settings below, and source the resulting file
 # to customize the demo scripts that are in this directory.
 #
-# NOTE: The DOCKER settings below are required to run the test scripts,
-# so at a minimum these environment settings must be changed.
+# NOTE: The DOCKER settings below are required, unless CREATE_DOCKER_INTERNAL_REGISTRY
+# is set to "true"
 
-# CHANGE THE FOLLOWING DOCKER CREDENTIAL ENVIRONMENT VARIABLES!!!
-# Docker registry credentials are required since the demo scripts need to
-# build and push demo images to a registry so that the images can then be
-# pulled by KinD. For example, if you are using your personal DockerHub
+# Docker registry credentials are need to build and push demo images 
+# to a registry so that the images can then be pulled by KinD. 
+# For example, if you are using your personal DockerHub
 # account, your environment settings might look something like this:
+#     export CREATE_DOCKER_INTERNAL_REGISTRY="false"
 #     export DOCKER_REGISTRY_URL="docker.io"
 #     export DOCKER_REGISTRY_PATH="firstnamelastname"
 #     export DOCKER_USERNAME="firstnamelastname"
 #     export DOCKER_PASSWORD="GreatGooglyMoogly"
 #     export DOCKER_EMAIL="firstname.lastname@example.com"
+#export CREATE_DOCKER_INTERNAL_REGISTRY="true"
 #export DOCKER_REGISTRY_URL="docker.io"
 #export DOCKER_REGISTRY_PATH="<your-dockerhub-org-or-username>"
 #export DOCKER_USERNAME="<your-dockerhub-username>"
