Miscellaneous cleanup for KinD example
- Parameterized local Docker registry name and port as env vars just in
  case someone has a conflict.
- If KinD cluster is already running, and USE_DOCKER_LOCAL_REGISTRY is
  set to 'true', check that the registry is already running, or else
  exit with an error that the KinD cluster needs to be recreated.
- Delete instances of '--recreate-pods' flag.
- Deleted this export in 1_create_kind_cluster since it shouldn't have
  any effect (it's not sourced by the parent `start` script):
       export DOCKER_REGISTRY_URL="${reg_ip}:${reg_port}"
- Updated some comments re. use of local Docker registry in example's
  README.md and in some scripts.

--- a/examples/kubernetes-in-docker/customize.env
+++ b/examples/kubernetes-in-docker/customize.env
@@ -6,10 +6,11 @@
 # NOTE: The DOCKER settings below are required, unless USE_DOCKER_LOCAL_REGISTRY
 # is set to "true"
 
-# Docker registry credentials are need to build and push demo images 
-# to a registry so that the images can then be pulled by KinD. 
-# For example, if you are using your personal DockerHub
-# account, your environment settings might look something like this:
+# You can choose to have the scripts create a local, insecure Docker registry
+# for pushing/pulling pod images by exporting the following:
+#     export USE_DOCKER_LOCAL_REGISTRY=true
+# Or you can use a public Docker registry (e.g. DockerHub) by exporting
+# your Docker credentials, which might look something like this:
 #     export USE_DOCKER_LOCAL_REGISTRY="false"
 #     export DOCKER_REGISTRY_URL="docker.io"
 #     export DOCKER_REGISTRY_PATH="firstnamelastname"
