Add script to enable authn-jwt flow
Can be used in automation that uses this helm chart

--- a/examples/common/customize.env
+++ b/examples/common/customize.env
@@ -45,3 +45,6 @@
 # Configuration for Conjur authn-k8s
 #export ANNOTATION_BASED_AUTHN="<true-or-false-defaults-to-true>"
 #export AUTHENTICATOR_ID="<authenticator-id-string-defaults-to-my-authenticator-id>"
+
+# Strategy of authentication. Can be authn-jwt or authn-k8s, defaults to authn-k8s
+#export AUTNH_STRATEGY="authn-k8s"
