Push edge image for poc porpuse
Don't merge to master!

--- a/conjur-oss/values.yaml
+++ b/conjur-oss/values.yaml
@@ -68,7 +68,7 @@ image:
   # repository: registry.connect.redhat.com/cyberark/conjur
   # tag: latest
   repository: cyberark/conjur  # https://hub.docker.com/r/cyberark/conjur/
-  tag: 'latest'
+  tag: 'edge'
   pullPolicy: Always
 
 nginx:
